finish the first section of the webpage and correct the alignment by adding another div

--- a/style.css
+++ b/style.css
@@ -47,19 +47,25 @@ h1, h2, h3, h4, h5, h6 {
 #root, #__next {
   isolation: isolate;
 }
-
-
-.content-0{
+.content--1{
   background-color: #1f2937;
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.content-0{
+
+
+  width: 1200px;
 }
 
 .header{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
  
   align-items: center;
+  width: 1200px;
 }
 
 .logo{
@@ -78,9 +84,9 @@ ul{
 }
 .content-1{
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   gap: 50px;
-  padding: 120px;
+  padding: 120px 0px;
 }
 .text {
   display: flex;
@@ -110,6 +116,7 @@ ul{
   width: 700px;
   display: flex;
   justify-content: center;
+  background-color: gray;
 }
 
 img{
